--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,10 +2,10 @@
   "$schema": "https://unpkg.com/@changesets/config@3.0.0/schema.json",
   "changelog": ["@changesets/changelog-github", { "repo": "fastdotdev/create-fast-dev" }],
   "commit": false,
-  "fixed": [],
+  "fixed": ["@repo/core", "@repo/shared"],
+  "ignore": ["@repo/core", "@repo/shared"],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": []
+  "updateInternalDependencies": "patch"
 }
